# esp_components

./: .gitmodules  CHANGELOG_IDF6.md  CMakeLists.txt  DOCUMENTACAO_MODULOS.md  EXEMPLO_ADICIONAR_COMPONENTE.md  EXEMPLO_USO.md  README.md  README_COMPONENTES_INDIVIDUAIS.md  TROUBLESHOOTING.md  esp_components.cpp  esp_components.h  idf_component.yml
ArduinoBLE/: BLECharacteristic.cpp  BLEDevice.cpp  BLEServer.cpp  CMakeLists.txt  FreeRTOS.cpp
ArduinoBLE/custom/: BLECharacteristic.h  BLEServer.h  FreeRTOS.h
ArduinoNimBLE/: CMakeLists.txt
BluetoothServer/: BluetoothConnection.cpp  BluetoothConnection.h  BluetoothManager.cpp  BluetoothManager.h  BluetoothServer.cpp  BluetoothServer.h  CMakeLists.txt  CommandCode.h  Commander.cpp  Commander.h  ConnectionManager.cpp  ConnectionManager.h  UserCommander.h  idf_component.yml
Connection/: BaseConnection.cpp  BaseConnection.h  CMakeLists.txt  CommandCode.cpp  CommandCode.h  Commander.cpp  Commander.h  ConnectionManager.cpp  ConnectionManager.h  idf_component.yml
Drivers/: Battery.cpp  Battery.h  CMakeLists.txt  Stepper.cpp  Stepper.h  idf_component.yml
ErrorCodes/: BluetoothErrorCodes.cpp  BluetoothErrorCodes.h  CMakeLists.txt  CommonErrorCodes.cpp  CommonErrorCodes.h  CommunicationErrorCodes.cpp  CommunicationErrorCodes.h  ErrorCode.cpp  ErrorCode.h  FileErrorCodes.cpp  FileErrorCodes.h  GeneralErrorCodes.cpp  GeneralErrorCodes.h  HardwareErrorCodes.cpp  HardwareErrorCodes.h  NetworkErrorCodes.cpp  NetworkErrorCodes.h  StorageErrorCodes.cpp  StorageErrorCodes.h  UserErrorCodes.cpp  UserErrorCodes.h  WifiErrorCodes.cpp  WifiErrorCodes.h  idf_component.yml
IoUtility/: CMakeLists.txt  FilteredInput.cpp  FilteredInput.h  LedBlinker.h  idf_component.yml
JsonModels/: CMakeLists.txt  Enums.h  JsonModels.cpp  JsonModels.h  idf_component.yml
NimBLE/: CMakeLists.txt  idf_component.yml
Storage/: CMakeLists.txt  Flash.cpp  Flash.h  NVS.cpp  NVS.h  SdCard.cpp  SdCard.h  SdCard_config.cpp  SdCard_user.cpp  Storage.cpp  Storage.h  Storage_config.cpp  Storage_user.cpp  idf_component.yml
UserManaging/: CMakeLists.txt  ConnectedUser.cpp  ConnectedUser.h  JsonData.cpp  JsonData.h  SimpleUser.cpp  SimpleUser.h  SimpleUserManager.cpp  SimpleUserManager.h  UsageData.cpp  UsageData.h  UserManager.cpp  UserManager.h  UserManager_Login.cpp  idf_component.yml
Utility/: CMakeLists.txt  CrossPlatformUtility.h  Event.cpp  LockableContainer.h  SafeList.h  Timeout.h  Utility.cpp  idf_component.yml
Wifi/: CMakeLists.txt  IPAddress.cpp  IPAddress.h  OTA_USAGE.md  OtaManager.cpp  OtaManager.h  Telnet.cpp  Telnet.h  WiFiManager.cpp  WiFiManager.h  Wifi.cpp  Wifi.h  WifiClient.cpp  WifiClient.h  WifiConnection.cpp  WifiConnection.h  WifiOta.cpp  WifiOta.h  WifiServer.cpp  WifiServer.h  WifiTelnet.cpp  WifiTelnet.h  WirelessDevice.cpp  WirelessDevice.h  idf_component.yml
cppjson/: CMakeLists.txt
utility/: CMakeLists.txt  CrossPlatformUtility.cpp  CrossPlatformUtility.h  Enums.h  Event.h  Exceptions.h  FilteredInput.cpp  FilteredInput.h  LedBlinker.cpp  LockableContainer.h  SafeList.cpp  SafeList.h  SafeMap.h  Singleton.cpp  Singleton.h  Timeout.h  Utility.cpp  Utility.h  idf_component.yml
